# Siemens-Spring-School-2020

./: .gitignore  CMakeLists.txt  README.md  main.cpp
